--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,11 +1,6 @@
-.sidebar {
-	width: 30%;
+aside {
+	width: 20%;
 	float: left;
-	ul {
-		margin: 0;
-		padding: 0;
-		li {
-			list-style: none;
-		}
-	}
+	height: 100vh;
+	position: fixed;
 }
