--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,8 +13,13 @@
 @import 'typography';
 @import 'navigation';
 @import 'sidebar';
+@import 'header';
+@import 'about';
+@import 'work';
+@import 'style';
 @import 'comments';
 @import 'footer';
+
 /*
 ====================================
 Default Styling
@@ -33,13 +38,12 @@ body {
 
 main {
 	width: 100%;
-	position: absolute;
 }
 
-img {
-	max-width: 100%;
+section {
+	min-height: 100vh;
+	padding-bottom: 200px;
 }
-
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
@@ -59,33 +63,58 @@ img {
 	width: 100%;
 }
 
-header {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+img {
+	max-width: 100%;
 }
 
-h1,
-p.tagline {
-	padding: 0;
-	margin: 0;
+// Grid background
+figure {
+	position: relative;
+	&::after {
+		content: "";
+		display: block;
+		height: 120%;
+		width: 100%;
+		position: absolute;
+		top: -10%;
+		left: 30px;
+		background: radial-gradient(circle, $cyan 30%, transparent 30%), radial-gradient(circle, $cyan 30%, transparent 30%);
+		background-size: 12px 12px;
+		z-index: -2;
+	}
+	&::before {
+		content: "";
+		display: block;
+		height: 30%;
+		width: 50%;
+		position: absolute;
+		top: -10%;
+		left: 30px;
+		background: white;
+		z-index: -1;
+	}
+}
+
+h2 {
+	@include fontSizer(44);
 	text-transform: uppercase;
-	font-weight: 700;
-	line-height: 1;
-	text-align: center;
-}
-
-h1 {
-	@include fontSizer(100);
-	text-shadow: 6px 8px 0 $cyan;
-	letter-spacing: 3px;
-}
-
-p.tagline {
-	@include fontSizer(34);
+	letter-spacing: 1px;
+	position: relative;
+	padding-left: 30px;
 	color: $darkgrey;
+	margin: 50px 0;
+	&::after {
+		left: 0;
+		content: '';
+		display: block;
+		position: absolute;
+		height: 60%;
+		background: $cyan;
+		width: 100%;
+		top: 70%;
+		transform: translate(0, -50%);
+		z-index: -1;
+	}
 }
 
 
