--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,8 @@
 @import 'header';
 @import 'about';
 @import 'work';
+@import 'skills';
+@import 'contact';
 @import 'comments';
 @import 'footer';
 
@@ -49,7 +51,7 @@ section {
 }
 
 .inner-wrapper {
-	margin-left: 20%;
+	margin-left: 250px;
 }
 
 .content {
@@ -93,6 +95,7 @@ figure {
 		z-index: -1;
 	}
 }
+
 
 h2 {
 	@include fontSizer(44);
