--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,11 +1,25 @@
 h2.skillLabel {
 	@include fontSizer(30);
 	font-weight: 500;
+	display: inline-block;
 	&::after {
 		background: $lightgrey;
-		width: 30%;
+		width: calc(100% + 40px);
+		height: 90%;
+		top: 80%;
+	}
+	&:nth-of-type(2) {
+		text-align: right;
+		float: right;
+		padding-right: 30px;
+		padding-left: 0;
+		&::after {
+		    left: -52px;
+		}
 	}
 }
+
+
 
 ul.skillsList {
 	margin: 0;
@@ -14,11 +28,15 @@ ul.skillsList {
 	display: flex;
 	flex-flow: row wrap;
 	width: 100%;
+	&:nth-of-type(2) {
+		justify-content: flex-end;
+	}
 	li {
 		width: 16%;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
+		margin-bottom: 30px;
 	}
 	i {
 		@include fontSizer(54);
