--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,6 +1,7 @@
 ul.portfolio {
 	display: flex;
 	flex-direction: column;
+	overflow: hidden;
 }
 .portfolioItem {
 	display: flex;
@@ -10,38 +11,57 @@ ul.portfolio {
 		width: 40%;
 		&::after {
 			width: 300%;
+			height: 110%;
 		}
 	}
 
 	.info {
-		width: 60%;
-		margin: 20px 40px;
-		padding: 20px 20px 20px 30px;
+		width: 55%;
+		margin: 40px 0;
+		padding: 20px 30px 20px 40px;
 		background: white;
-		z-index: -2;
+		z-index: 0;
 	}
 
 	h3 {
+		@include fontSizer(22);
 		text-transform: uppercase;
 		position: relative;
 		z-index: -1;
-		margin-bottom: 5px;
+		margin: 10px 0;
 		&::after {
 			content: '';
 			display: block;
 			position: absolute;
-			top: 50%;
+			top: 35%;
 			left: -20px;
 			background: $lightgrey;
-			height: 200%;
-			width: 100%;
+			height: 60px;
+			width: calc(100% + 20px);
 			z-index: -2;
 		}
 	}
 	.skillsUsed {
 		margin: 0;
+		text-transform: uppercase;
+		color: darken($medgrey, 15);
+		font-weight: 700;
+		@include fontSizer(12);
+		position: relative;
+		&::after {
+			content: '';
+			display: block;
+			position: absolute;
+			top: 45%;
+			left: -20px;
+			background: $lightgrey;
+			height: 100%;
+			width: calc(100% + 20px);
+			z-index: -2;
+		}
 		span {
 			font-weight: 700;
+			padding: 0 3px;
 		}
 		span:last-of-type {
 			display: none;
@@ -49,5 +69,25 @@ ul.portfolio {
 	}
 	p {
 		z-index: 1;
+	}
+	.shortDesc {
+		padding-top: 10px;
+	}
+	a.live {
+		border: 2px solid $cyan;
+		background: $cyan;
+		color: $darkgrey;
+		padding: 10px 15px;
+		text-transform: uppercase;
+		font-weight: 700;
+		color: black;
+		display: inline-block;
+		float: right;
+		margin-right: 20px;
+		text-align: center;
+		transition: all 0.5s ease;
+		&:hover {
+			background: white;
+		}
 	}
 }
