Updated Design and responsive

--- a/sass/_brand.scss
+++ b/sass/_brand.scss
@@ -1,4 +1,6 @@
 $mainFont: 'Josefin Sans', sans-serif;
+$secondFont: 'Maven Pro', sans-serif;
+
 
 $darkgrey: #585858;
 $medgrey: darken(#DADADA, 15);
