--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -11,13 +11,47 @@
 		.innerWrapper {
 			p {
 				float: left;
-				width: 60%;
-				@include fontSizer(20);
+				width: 70%;
+				@include fontSizer(16);
 				padding-right: 50px;
+				margin: 0;
+				font-family: $secondFont;
 			}
 			figure {
-				width: 35%;
+				width: 25%;
 				float: left;
+			}
+		}
+	}
+}
+
+@media (max-width: 900px) {
+	#about .wrapper .innerWrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		p {
+			float: none;
+			width: 100%;
+			padding-right: 0;
+		}
+		figure {
+			float: none;
+			order: -1;
+			margin-bottom: 30px;
+			max-width: 50%;
+			width: 100%;
+		}
+	}
+}
+
+@media (max-width: 650px) {
+	#about {
+		.wrapper {
+			.innerWrapper {
+				p {
+					padding: 0 20px;
+				}
 			}
 		}
 	}
