--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,20 @@
 footer {
 	clear: both;
+	text-align: left;
+	text-transform: uppercase;
+	font-weight: 700;
+	@include fontSizer(12);
+	padding-left: 30px;
+	p {
+		padding: 0;
+		margin: 0;
+	}
+}
+
+@media (max-width: 650px) {
+	footer {
+		text-align: center;
+		padding-left: 0;
+		padding: 0;
+	}
 }
