--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -1,9 +1,84 @@
+.hamburgerWrapper {
+	display: none;
+	width: 40px;
+	height: 40px;
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	z-index: 20;
+	box-shadow: 3px 3px 0 $cyan;
+	.menuCheck {
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		opacity: 0;
+	    cursor: pointer;
+		z-index: 20;
+		width: 40px;
+		height: 40px;
+		&:checked {
+			& + .hamburger {
+				div{
+					transform: rotate(135deg);
+				 	&:before,
+				    &:after {
+				    	top: 0;
+				    	transform: rotate(90deg);
+				    }
+				    &:after {
+				    	opacity: 0;
+				    }
+				}
+			}
+		}
+	}
+}
+
+.hamburger {
+	// display: none;
+	position: fixed;
+	background: $lightgrey;
+	opacity: 0.8;
+	width: 40px;
+	height: 40px;
+	padding: 5px;
+	z-index: 5;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	div {
+		position: relative;
+		height: 3px;
+		background: white;
+		width: 100%;
+		z-index: 100;
+        transition: all 0.5s ease;	
+		&:before,
+      	&:after {
+	        content: '';
+	        position: absolute;
+	        z-index: 10;
+	        top: -8px;
+	        left: 0;
+	        width: 100%;
+	        height: 3px;
+	        background: white;
+	        transition: all 0.5s ease;
+      	}
+      	&:after {
+        	top: 8px;
+      	}
+	}
+}
+
 aside {
 	width: 250px;
 	top: 0;
 	height: 100vh;
 	position: fixed;
-	z-index: 100;
+	z-index: 10;
 	// border-right: 1px dashed $lightgrey;
 	.innerNav {
 		position: relative;
@@ -33,5 +108,32 @@ aside {
 	transition: all 1s ease;
 	&.hidden {
 		opacity: 0;
+	}
+}
+
+@media (max-width: 800px) {
+	aside {
+		width: 200px;
+	}
+}
+
+@media (max-width: 650px) {
+	aside {
+		display: none;
+		position: fixed;
+		height: 100%;
+		width: 100%;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: rgba(255,255,255,0.95);
+	}
+	.navLogo,
+	.arrowUp .fa {
+		display: none;
+	}
+	.hamburgerWrapper {
+		display: block;
 	}
 }
