--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,7 +1,9 @@
 h2.skillLabel {
-	@include fontSizer(30);
+	@include fontSizer(24);
+	letter-spacing: 1px;
 	font-weight: 500;
 	display: inline-block;
+	margin: 0 0 40px 0;
 	&::after {
 		background: $lightgrey;
 		width: calc(100% + 40px);
@@ -9,9 +11,10 @@ h2.skillLabel {
 		top: 80%;
 	}
 	&:nth-of-type(2) {
+		margin-top: 30px;
 		text-align: right;
 		float: right;
-		padding-right: 30px;
+		padding-right: 40px;
 		padding-left: 0;
 		&::after {
 		    left: -52px;
@@ -36,13 +39,82 @@ ul.skillsList {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-		margin-bottom: 30px;
+		margin-bottom: 15px;
+		min-width: 90px;
+		.skillIcon {
+			width: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			object {
+				height: 40px;
+				svg {
+					fill: $darkgrey;
+				}
+			}
+		}
 	}
 	i {
-		@include fontSizer(54);
+		@include fontSizer(50);
 		text-align: center;
 	}
 	p {
 		text-align: center;
+		margin: 10px 0;
+		font-weight: 700;
+		text-transform: uppercase;
+		@include fontSizer(12);
 	}
+}
+
+@media (max-width: 800px) {
+	ul.skillsList {
+		li {
+			width: 20%;
+		}
+		i {
+			@include fontSizer(40);
+		}
+	}
+}
+
+@media (max-width: 700px) {
+	ul.skillsList {
+		justify-content: center;
+		align-items: center;
+		li {
+			width: 25%;
+		}
+	}
+}
+
+@media (max-width: 650px) {
+	h2.skillLabel {
+		@include fontSizer(22);
+		display: inline-block;
+		padding-left: 20px;
+		&::after {
+			width: 100%;
+			height: 90%;
+			top: 80%;
+		}
+		&:nth-of-type(2) {
+			padding-right: 20px;
+			&::after {
+				left: 0;
+			    right: 0;
+			}
+		}
+	}
+	ul.skillsList {
+		width: 95%;
+	}
+}
+
+@media (max-width: 500px) {
+	ul.skillsList {
+		li {
+			width: 33%;
+		}
+	}	
 }
